# plof3

./: .hgignore  AUTHORS  COPYING  Makefile  Makefile.am  Makefile.pslcode  Makefile.pslcode.cplof  README  autoreconf.sh  closebranch.sh  configure.ac  curry.plof  dsss.conf  eliminatehead.sh  extcoreball.sh  extensions.d  mkcoreball.sh  plofbnf.plof  plofc  test.plof
autotests/: 01-style.test  01-tabs.test  05-cplof-compile.test  05-cplof-gccnoauto.test  06-cplof-gccnoauto.test  06-cplof-watcom.test  07-cplof-compile.test  10-pslasm.test  20-prp.test  25-compile.test  26-strip.test  30-stdpsl.test  40-exec.test  41-exec-nointrinsics.test  50-oddities.test  runtest  runtests  testenv
autotests/compile/01/: expected
autotests/compile/02/: expected
autotests/compile/03/: expected
autotests/compile/04/: 04.plof  expected
autotests/disabled/: 20-prp.test  26-strip.test
autotests/exec/01/: 01.plof  expected
autotests/exec/02-cnfi/: 01.plof
autotests/exec/03/: 01.plof
autotests/exec/04-cnfi-wrapper/: wrapper_printf.plof
autotests/exec/05-io/: 01.plof  expected  foo  test.plof
autotests/exec/06-include/: 01.plof
autotests/exec/07-import/: 01.plof  c01.plof  expected
autotests/exec/08-import-plof/: 01.plof  expected  i01.plof
autotests/exec/09-module-disagreement/: 01.plof  i01.plof
autotests/exec/10-concat/: 01.plof  expected
autotests/exec/11-collection-cmp/: 01.plof  expected
autotests/exec/12-if-in-for/: 01.plof
autotests/exec/13-public-module/: 01.plof  (+1 more)
core/: Makefile.am  Makefile.am~  configure.ac
core/base/: base.apsl
core/pul/: boolean.plof  boolean_g.plof  builtins.plof  c_pcre.plof  cio.plof  cnfi.plof  collection.plof  collection_g.plof  comparisons_g.plof  conditionals.plof  dynamicTypes.plof  dynamicTypes_g.plof  exceptions.plof  include.plof  include_g.plof  io.plof  modules.plof  modules_g.plof  nfi.plof  number.plof  number_g.plof  object.plof  object_g.plof  pul.plof  pul_g.plof  std.plof  string.plof  string_g.plof  versions.plof
core/pul-old/: number.plof  pul.plof  std.plof  string.plof
core/src/: cnfi.psl  puldebug.psl  std.psl
core/src/base/: base.psl
core/src/debug/: nonfi.psl  std.psl
core/src/pul/: Makefile.am  Makefile.am~  boolean_g.plof  cio.plof  collection.plof  dynamicTypes_g.plof  exceptions.plof  include_g.plof  io.plof  number.plof  pul.plof  regex.plof  string.plof
cplof/: AUTHORS  BOXING  COPYING  ChangeLog  DEBUG  Makefile  README  configure.ac  jump.h  plof.h  psl.c  psl.h  psl_inst.h  psli.c
cplof/src/: Makefile.am  ast.c  ast.h  basicconfig.h  bignum.c  bignum.h  buffer.h  dict.h  gen.c  impl.h  interp.h  intrinsics.c  intrinsics.h  jump.h  leaky.h  lex.c  lex.h  main.c  memory.c  memory.h  mempool.c  mempool.h  normalizeTiming.pl  optimizations.c  optimizations.h  packrat.c  packrat.h  packrat_test.c  parse.c  parse.h  plof.h  prp.c  prp.h  psl-cpsl.c  psl-impl.c  psl-optim.c  psl.c  psl.h  psl_inst.h  psl_internal_inst.h  (+10 more)
cplof/src/impl/: aconcat.c  add.c  and.c  array.c  byte.c  call.c  calli.c  catch.c  ccall.c  cfree.c  cget.c  cinteger.c  cmalloc.c  cmp.c  code.c  combine.c  concat.c  cset.c  csget.c  csizeof.c  csset.c  cstruct.c  ctype.c  debug.c  delete.c  deleted.c  dinstruction_sequence_end.c  dinstruction_sequence_start.c  div.c  dlclose.c  dlopen.c  dlsym.c  done.c  dsrccol.c  dsrcfile.c  dsrcline.c  end.c  eq.c  extractraw.c  fadd.c  (+89 more)
cplof/src/leaky/: array.c  calli.c  csizeof.c  fadd.c  gadd.c  lte.c  members.c  print.c  push0.c  push2.c  push3.c  push4.c  push5.c  push6.c  push7.c  resolve.c
cplof/src/optim/: array.c  call.c  catch.c  ccall.c  cmalloc.c  cmp.c  code.c  csget.c  csset.c  eq.c  fgte.c  fsub.c  gadd.c  global.c  grem.c  gt.c  gte.c  index.c  indexset.c  integer.c  intrinsic.c  locals.c  localset.c  lt.c  lte.c  member.c  memberset.c  ne.c  null.c  nullarray.c  parentset.c  push1.c  resolve.c  return.c  slice.c  version.c
cplof/src/plof/: bignum.h  buffer.h  memory.h  packrat.h  plof.h  prp.h  psl.h  pslfile.h  uthash.h
cplofr/: Makefile  gc.c  gc.h  gctest.c  jump.h  plof.h  psl.c  psl.h  psl_inst.h  psli.c  timetest.sh
dplof/: dsss.conf  plof_include  plofc
dplof/libffi/: libffi.d
dplof/plof/: main.d
etc/: gctiming.sh  plof.vim  runtiming.sh
libffi/: libffi.d
plof/: main.d
plof/ap/: action.d  apobject.d  interp.d  serial.d  threads.d
plof/ast/: ast.d  optimize.d  toast.d
plof/prp/: iprp.d  packrat.d  packrat_test.d  prp.d
plof/psl/: ast.d  compile.d  file.d  gc.d  interp.d  psl.d  psli.d  pslobject.d  replace.d  toast.d  treemap.d
plof/searchpath/: searchpath.d
plof_include/: cnfi.psl
plof_include/debug/: cnfi.psl  stddebug.psl
plofcore/: AUTHORS  COPYING  Makefile.am  README
plofcore/pul/: comparisons.plof  modules.plof  modules_g.plof
plofcore/src/: nonfi.psl
plofcore/src/base/: base.apsl
plofcore/src/debug/: cnfi.psl
plofcore/src/pul/: boolean.plof  boolean_g.plof  builtins.plof  c_pcre.plof  cio.plof  cnfi.plof  collection.plof  collection_g.plof  comparisons.plof  comparisons_g.plof  conditionals.plof  dynamicTypes.plof  dynamicTypes_g.plof  eval_g.plof  exception_strings.plof  exceptions.plof  include_g.plof  introspection.plof  io.plof  modules.plof  modules_g.plof  nfi.plof  nonfi.plof  number.plof  number_g.plof  object.plof  object_g.plof  pul.plof  pul.psl  pul_g.plof  regex.plof  serialization.plof  string.plof  string_g.plof  versions.plof
ploforth/: Makefile  buffer.h  builtins.h  dict.h  jump.h  ploforth  ploforth.c  ploforth.h  repl.c  token.c  token.h
plofplof/: plofplof.plof  psl.plof  pslast.plof  pslastString.plof  pslbignum.plof  pslfile.plof  test.apsl
spec/: Makefile  a4.tex  a4book.tex  appendices.tex  asciipslgroups.tex  cnfi.tex  header.tex  letter.tex  letterbook.tex  operations.tex  operatorEquivalents.tex  operatorFunctions.tex  prp.tex  psl.tex  pul.tex  spec.tex
spec/operations/: combine.tex  while.tex
tests/: Makefile  binarytrees.plof  curry.exp  curry.plof  include.exp  include.plof  included.plof  inspect.plof  repl.plof  test.exp  test.plof  test_cnfi.exp  test_cnfi.plof
(+50 files in other folders)
